--- a/sleeptracker/package.json
+++ b/sleeptracker/package.json
@@ -19,12 +19,19 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@capacitor/android": "4.4.0",
     "@capacitor/app": "4.1.0",
     "@capacitor/core": "4.4.0",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
+    "@capacitor/preferences": "^4.0.2",
     "@capacitor/status-bar": "4.0.1",
+    "@fortawesome/angular-fontawesome": "^0.11.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@ionic/angular": "^6.1.9",
+    "chart.js": "^4.0.1",
+    "chartjs-plugin-datalabels": "^2.1.0",
     "ionicons": "^6.0.3",
     "rxjs": "~6.6.0",
     "shortid": "^2.2.16",
@@ -44,6 +51,7 @@
     "@capacitor/cli": "4.4.0",
     "@ionic/angular-toolkit": "^6.0.0",
     "@ionic/lab": "3.2.15",
+    "@schematics/angular": "^15.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
